[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies.iced]
version = "0.4.2"
features = ["image", "debug", "tokio"]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]